splitting images into tiles

--- a/examples/datasets/create_mnist_bags_dataset.ipynb
+++ b/examples/datasets/create_mnist_bags_dataset.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from tensorflow.keras.datasets.mnist import load_data\n",
@@ -15,7 +19,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = load_data()\n",
@@ -27,7 +35,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Create bags of mnist that contain a 7"
    ]
@@ -35,7 +47,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def group_instances_bag(X, y, mean, std, size, digit):\n",
@@ -67,7 +83,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def plot_bag(bag, label_bag, label_instance, digit):\n",
@@ -88,7 +108,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train_bags, train_bag_labels, train_ins_labels, test_bags, test_bag_labels, test_ins_labels = get_dataset(x_train, y_train, \n",
@@ -99,7 +123,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "np.save('mnist_bags_7.npy', [train_bags, train_bag_labels, train_ins_labels, test_bags, test_bag_labels, test_ins_labels])"
@@ -108,7 +136,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -202,7 +234,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Create bags of mnist that contain 2 digits. 2 and 3"
    ]
@@ -210,7 +246,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train_bags, train_bag_label, train_labels, test_bags, test_bag_label, test_labels = get_dataset(x_train, y_train, x_test, y_test, 16, 2, [2,3], sizes=[200,100])"
@@ -219,7 +259,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "np.save('mnist_bags_2_and_3.npy', [train_bags, train_bag_label, train_labels, test_bags, test_bag_label, test_labels])"
@@ -228,7 +272,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -358,7 +406,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Create bags of mnist succesive digits. 42"
    ]
@@ -366,7 +418,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def group_instances_bag_consecutive(X, y, mean, std, size, str_digit):\n",
@@ -398,7 +454,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def plot_bag(bag, label_bag, label_instance, digit):\n",
@@ -427,7 +487,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train_bags, train_bag_label, train_labels, test_bags, test_bag_label, test_labels = get_dataset_consecutive(x_train, y_train, \n",
@@ -439,7 +503,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "np.save('mnist_bags_42.npy', [train_bags, train_bag_label, train_labels, test_bags, test_bag_label, test_labels])"
@@ -448,7 +516,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
